Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,5 @@
 	push = +force group user/Erik Westrup (erikw)
 	pushTag = group user/Erik Westrup (erikw)
 	pushSignedTag = group user/Erik Westrup (erikw)
+[submit]
+	action = rebase if necessary
