--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ segments/np_mpd
 segments/xkb_layout
 *.swp
 
-# ignore all themes, only default.sh
+# ignore all themes, except default.sh and bubble.sh
 themes/*
 !themes/default.sh
-!themes/bubble_theme.sh
+!themes/bubble.sh
