Disable linter pylint

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -37,4 +37,5 @@ jobs:
           VALIDATE_CPP: false
           VALIDATE_CLANG_FORMAT: false
           VALIDATE_SHELL_SHFMT: false
+          VALIDATE_PYTHON_PYLINT: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
