--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "ifstat",
         "powerline",
+        "rogalmic",
+        "shellcheck",
+        "timonwong",
+        "TMUXCONF",
         "tmuxpowerlinerc"
     ]
 }
