Fix JSON syntax

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"features": {
 		"ghcr.io/devcontainers-extra/features/apt-get-packages:1": {
-			"packages": ["shellcheck", "tmux", "ifstat"] 
+			"packages": ["shellcheck", "tmux", "ifstat"]
 		}
 	},
 	"postCreateCommand": "bash scripts/devcontainer_postCreateCommand.sh",
@@ -11,7 +11,7 @@
 				"EditorConfig.EditorConfig",
 				"mads-hartmann.bash-ide-vscode",
 				"rogalmic.bash-debug",
-				"timonwong.shellcheck",
+				"timonwong.shellcheck"
 			]
 		}
 	}
