Set devcontainer base image

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
+	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
 		"ghcr.io/devcontainers-extra/features/apt-get-packages:1": {
 			"packages": ["shellcheck", "tmux", "ifstat"]
