Revert "Update devcontainer image to universal:5"
This reverts commit 2126a7fa07595b088793ace48e01c52962c5f673.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/universal:5",
+	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
 		"ghcr.io/devcontainers-extra/features/apt-get-packages:1": {
 			"packages": ["ifstat", "golang-go", "shellcheck", "tmux"]
